--- a/article/structural/bibliography.tex
+++ b/article/structural/bibliography.tex
@@ -13,13 +13,23 @@ https://doi.org/10.1162/coli\_a\_00402
 https://aclanthology.org/2020.lrec-1.497
 
 \bibitem{bib3}
-https://mova.institute/золотий\_стандарт
+Shkuratjana, N. and Shevchuk, S. (2010). Modern Ukrainian literary language. Modular course.
+
+\bibitem{bib5}
+https://web.stanford.edu/~jurafsky/
+web.stanford.edu/~jurafsky/slp3/12.pdf
+
+\bibitem{bib6}
+https://en.wikipedia.org/wiki/CYK\_algorithm
+
+\bibitem{bib7}
+https://en.wikipedia.org/wiki/Chomsky\_normal\_form
+
 \bibitem{bib4}
 https://microsoft.github.io/language-server-protocol/specifications/lsp/3.17/specification/
-\bibitem{bib6}
-ааа
-\bibitem{bib7}
-ааа
+
+
+
 \bibitem{bib8}
 ааа
 \bibitem{bib9}
@@ -37,6 +47,6 @@ https://microsoft.github.io/language-server-protocol/specifications/lsp/3.17/spe
 \bibitem{bib15}
 ааа
 \bibitem{bib16}
-ааа
+https://mova.institute/золотий\_стандарт
 
 \end{thebibliography}
