--- a/article/structural/introduction.tex
+++ b/article/structural/introduction.tex
@@ -5,3 +5,9 @@
 \begin{center}
 \textbf{\Large ВСТУП}
 \end{center}
+
+Обробка природної мови - це область комп’ютерної лінгвістики, мета якої
+полягає у знаходженні значимої інформації з текстів, подальшому аналізі цієї ін-
+формації та прикладному застосуванні проаналізованих даних. Предметом дослі-
+дження є природні мови - ті, які природньо розвивалася з часом та які люди вико-
+ристовують для того, щоб комунікувати між собою.
