feat(article): complete more sections

--- a/article/main.tex
+++ b/article/main.tex
@@ -17,6 +17,7 @@
 \include{article/sections/section2}
 \include{article/sections/section3}
 \include{article/sections/section4}
+\include{article/sections/section5}
 \include{article/structural/conclusion}
 \include{article/structural/bibliography}
 
