--- a/article/structural/conclusion.tex
+++ b/article/structural/conclusion.tex
@@ -4,3 +4,18 @@
 \begin{center}
 \textbf{\Large ВИСНОВКИ}
 \end{center}
+
+У ході виконання цієї роботи було розроблено інструмент, який дозволяє аналізувати
+корпуси текстів на відповідні статистичні закономірності, такі як частота зустрічання
+частин мови, частота універсальних залежностей від кореневого елементу речення, глибина
+та ширина піддереви кожного слова, та інші.
+Цей інструмент не залежить від мови, тому можна аналізувати та порівнювати будь-які мови
+корпусу. Додані інструменти по нормалізації корпусів сприяють тому, щоб різниця
+у вхідних даних, при порівнянні різних мов була мінімальною.
+
+Було проведено порівння корпусів з іспанською та українською мовами та встановлено кореляцію
+деяких характеристик із законом Ципфа.
+
+Перед виконанням цієї роботи я ознайомився з методами обробки природної мови
+а також з науковими статистичними бібліотеками мови Python, а саме Pandas та Numpy, які використовувалися
+в кінцевому програмному продукті.
