--- a/article/structural/introduction.tex
+++ b/article/structural/introduction.tex
@@ -11,3 +11,25 @@
 формації та прикладному застосуванні проаналізованих даних. Предметом дослі-
 дження є природні мови - ті, які природньо розвивалася з часом та які люди вико-
 ристовують для того, щоб комунікувати між собою.
+
+Основоположною задачею при дослідження природних мов є створення класифікованих
+та впорядкованих наборів даних, для того щоб з них можна було отримати
+корисну інформацію, яку можна використати у прикладних сферах науки та програмування.
+На основі таких даних можна створювати штучні інтелекти, для взаємодії з комп'ютером
+використовуючи тільки природню мову. Прикладами таких систем є асистенти в популярних
+мобільних операційних системах, які виводять інтерфейс користування пристроєм
+на зовсім інший рівени. Але застосування подібних штучних інтелектів
+не обмежується тільки голосовими асистентами. Дуже перспективними є варіанти застосування
+для аналізу текстів та маркування їх за певними категоріями. Досконало дослідивши
+закономірності в природних мовах можна значно підвищити точність машинного перекладу
+(наприклад сервіс Google Translate) або створити системи, які перевіряють
+тексти на граматичні та лексичні помилки (наприклад сервіс Grammarly). Такі системи
+послуговуються не тільки набором вхідних слів, а й структурою речення,
+його забарвленням та, навіть, контекстом, у якому воно вживається.
+
+Метою цієї роботи є створення інструменту, який дозволяє досліджувати та порівнювати
+статистичні закономірності у різних природніх мовах,
+використовуючи корпуси текстів Universal Dependencies. Це дозволить краще розуміти
+інформацію про структуру та форму даних, що будуть використовуватися для
+створення моделей штучних інтелектів. Як наслідок, можна буде використовувити
+найбільш підходящі набори даних, для навчання таких моделей.
