--- a/article/sections/section1.tex
+++ b/article/sections/section1.tex
@@ -107,6 +107,18 @@
 з двох нетермінальних символів, або з одного термінального символа.
 
 \subsection{Парсинг залежностей}
+У конституентного парсингу є два фатальні недоліки, які не дозволяють
+моделювати важливі структурні та лексичні залежності:
+\begin{enumerate}
+    \item Припущення про незалежність: такий метод спирається на статистичні
+    вірогідності, які не є точними на сто відсотків, що може призводити до
+    неправильного моделювання залежностей.
+    \item При моделюванні не враховуються деякі синтаксичні факти щодо певних слів,
+    що може призводити до підкатегоризації слів, що мають однакове значення,
+    або може втрачатися інформація про об'єднання прийменника та іменника
+    в одну групу.
+\end{enumerate}
+
 Конституентний парсинг - це не єдиний спосіб парсингу інформації у реченні.
 Іншим способом є парсинг залежностей (dependency parsing). Кожне слово у
 реченні можна логічно з'єднати з іншим словом, від якого вого залежить,
@@ -144,4 +156,27 @@
     вузла у реченні. Тобто такий направлений граф є деревом.
 \end{enumerate}
 
-Існують ... 8:24
+Існують два основні підходи до створення алгоритмів, що генерують дерева
+залежностей із вхідних даних:
+\begin{enumerate}
+    \item Транзиційні підходи (Transition-based approaches), до яких відносять парсери
+    Shift-reduce.
+    \item Алгоритми на основі графів та виділенню кістякових дерев.
+\end{enumerate}
+
+Деякі алгоритми є проективними, тобто зв'язки між вузлами не можуть пересікатися, як
+це зображено на рисунку \ref{img:dependency_tree}. Більшість реченнь у мові
+влаштована саме таким чином. Але є й речення, у яких грані графа перетинаються. Тому це
+потрібно враховувати при обробці відповідних наборів даних.
+
+Коли ми говоримо про транзиційні підходи, найчастіше маються на увазі
+парсери, які побудовані на основі програмного стеку. Такі парсери структурно можна
+розділити на дві функції, які вони виконують. Перша - це машина побудована на стеку,
+яка кладе слова речення на верхівку цього стеку. Друга - безпосередньо
+сам парсер, або натренована нейронна мережа, яка вирішує яким чином потрібно
+розставляти зв'язки між термінальними членами речення. Саме цей парсер і будує
+граф, розставляючи ці зв'язки, у яких є тільки два напрями: вправо і вліво.
+Він бере два останні елементи на стеку та встановлює між ними відношення \cite{bib8}.
+Такі парсери будують на основі тренованих нейронних мереж, які
+стають класифікаторами токенів. Найбільшою вибіркою даних для навчання цих класифікаторів
+є корпуси текстів Universal Dependencies.
