--- a/article/sections/section2.tex
+++ b/article/sections/section2.tex
@@ -1,25 +1,28 @@
 \section{КОРПУСИ ТЕКСТІВ UNIVERSAL DEPENDENCIES}
 
+Проблема відмінності природних мов заважає класифікації та порівнянню цих мов,
+тому проект Universal Dependencies ставить на меті її вирішити.
+
 % https://applied-language-technology.mooc.fi/html/notebooks/part_iii/02_universal_dependencies.html
 
 % https://universaldependencies.org/u/pos/
 
 \subsection{Корпуси текстів Universal Dependencies}
-укр - 122275 токенів 122324 слова 7060 реченнь
-
+% укр - 122275 токенів 122324 слова 7060 реченнь
 Корпуси текстів Universal Dependencies або скорочено UD — це проект спільної розробки
 з відкритим кодом, який має дві основні цілі:
 
 \begin{enumerate}
     \item розробити загальну структуру для опису граматичної структури різноманітних мов.
     \cite{bib1}
-    \item створювати анотовані корпуси або \hyperlink{term0}{трібанки} для різних мов,
+    \item створювати анотовані корпуси або \hyperlink{term0}{банки дерев} для різних мов,
     які застосовують цю структуру. \cite{bib2}
 \end{enumerate}
 
 Таким чином, проект має на меті забезпечити систематичний опис синтаксичних структур і
 морфологічних особливостей у різних мовах, що, у свою чергу, дозволяє проводити порівняння
-між мовами.
+між мовами. Це, в свою чергу значно полегшить роботу перекладачів
+адже всі важливі характеристики мов будуть класифікованими по категоріям.
 
 Лінгвістичні корпуси, які містять анотації для синтаксичних відносин,
 часто називають банками дерев (трібанками), оскільки синтаксичні структури, як правило,
@@ -30,31 +33,71 @@
 Структура UD є компромісом між кількома конкуруючими критеріями, які наведені нижче:
 
 \begin{enumerate}
-    \item UD має бути придатним для комп'ютерного розбору з високою точністю
     \item UD має бути задовільним для лінгвістичного аналізу окремих мов
-    \item UD повинен гарно виявляти структурні подібності між спорідненими мовами
+    \item UD має добре підходити для лінгвістичної типології, тобто 
+    забезпечувати відповідну основу для виявлення міжмовного паралелізму між
+    мовами та мовними сім’ями.
     \item UD має бути придатним для швидкого, послідовного анотування людиною-анотатором
+    \item UD має бути придатним для комп'ютерного розбору з високою точністю
+    \item UD повинен гарно виявляти структурні подібності між спорідненими мовами
     \item UD має бути легко зрозумілим і використаним користувачами, які не знають мови
 \end{enumerate}
 
+Попередником проекту Universal Dependencies був Stanford dependencies, розроблений у 2005 році як рушій для парсеру Stanford parser, щоб допомогти системам розпізнавання тексту Recognizing Textual Entailment, після чого став стандартом для аналізу залежностей англійської мови і з тих пір застосовувався до багатьох мов \cite{bib9}). Універсальний набір тегів Google виник у результаті міжмовного аналізу помилок на основі співпраці CoNLL-X McDonald і Nivre (2007) \cite{bib10}, вперше використаного для створення моделі, основаної на підході навчання без учителя, яка вміла визначати тип універсальної частини мови. Після чого ця система стала стандартом де-факто для відображення різноманітних наборів тегів. Наступною ітерацією став інструмент Interset для перетворення між наборами тегів морфологічного синтаксису різними мовами. Пізніше він був використаний як морфологічний шар у проекті HamleDT, для поєднання багатьох мов у загальній структурі анотацій.
+
+Проект Universal Dependency Treebank (UDT), в якому було створено бенки дерев для 6 мов, був першою спробою поєднати, універсальні теги Google та Stanford dependencies. Що послугувало приводом для створення проекту універсальних залежностей Стенфорда (USD). Фінальною ітерацією, яка закріпилася на момент написання цієї роботи є проект Universal Dependencies, який є результатом об’єднання всіх цих ініціатив в єдину когерентну структуру, засновану на Універсальних залежностях Стенфорда, розширеній версії набору універсальних тегів Google, переглянутої підмножини інвентаризації функцій Interset та переглянутої версії формату CoNLL-X, що отримав назву CoNLL-U.
+
+Перша версія Universal Dependencies, випущена ще в жовтні 2014 року, представила дещо розширений набір мовних тегів загального призначення. Цей набір має деякі відмінності від вихідного речення, але робить його менш насиченим і уточнює визначення категорій. В результаті цієї роботи теги універсальної частини мови (Universal Part of Speech) мають змістовні визначення і не обов'язково є еквівалентними класами категорій у головному банку дерев для окремих мов. Тому перетворення на теги універсальної частини часто вимагає змін контексту або внесенння змін вручну. Морфологічні ознаки UD призначені для аналізу, щоб отримати стислий набір основних ознак, які є унікальними та поширеними в усіх мовах. Представлення залежностей UD розвивається зі Стенфордських залежностей, які самі слідують ідеї опису, орієнтованого на граматичне відношення, який можна знайти в багатьох мовних структурах. Він централізовано організований навколо таких понять, як суб’єкт, об’єкт речення, визначник іменника та модифікатор іменника. Метою Universal Dependencies є краща адаптація граматичних структур типологічно різних мов, а також додавання чи покращення зв’язків, щоб очистити більш химерні та більш специфічні для англійської мови особливості оригінальної версії. Таким чином, нова таксономія має менше зв’язків, ніж оригінальна Stanford dependencies.
 
 \subsection{Формат даних CoNLL-U}
+Формат CoNLL-U є наступною ітерацією формату CoNLL-X \cite{bib11},
+що в свою чергу є схемою анотування лінгвістичних корпусів.
+По суті, це звичайний текстовий файл, розмічений таким чином, щоб
+його було зручно як і переглядати живій людині, та знаходити потрібні
+частини мови та слова у реченнях, так і комп'ютеру, щоб незалежно
+від мови програмування, на виході був максимально уніфікований формат даних.
+Головною вимогою до цього формату є те, що текст закодований в ньому за
+стандартом UTF-8 адже в різних мовах зустрічаються символи, які
+неможливо відобразити, використовуючи таблицю ASCII. Зважаючи на
+кількість та різноманітність мовних корпісів, анотованих в Universal Dependencies,
+це є вимушенинм кроком, без якого існування такого проекту є неможливим.
+У цьому форматі є всього 3 типи рядків:
+
+\begin{enumerate}
+    \item Рядки слів, що містять анотацію слова/токена в 10 полях, розділених одиночними символами табуляції.
+    \item Порожні рядки, що позначають межі речень.
+    \item Коментарі, або рядки, які починаються з символа ``\#''.
+\end{enumerate}
+
+У більшості випадків текстові файли редагуються людьми вручну. Файли
+CoNLL-U ж є форматом для обміну даними. Анотатори виконнують свою
+роботу по розмітці текстів та визначенню універсальних частин мови
+у графічному інтерфейсі, де основними елементами є дуги зв'язків
+та мітки про тип та частину мову. Вони не вносять вручну даних до
+цих файлів. У таких графічних прогрмах є спеціальні модулі,
+які відповідають серіалізацію та експорт цих даних то файлів CoNLL-U.
+
+Найважливіші дані для зберігаються у рядках слів. Тут знаходяться всі властивості,
+проанотовані лінгвістами, повний перелік та опис яких зображено у
+таблиці \ref{table:conllu}
 
 \begin{table}[ht]
+\centering
 \begin{tabular}{|l|l|}
 \hline
-  Field   & Description \\ \hline
-ID        & Index of the word in sequence \\ \hline
-FORM      & The form of a word or punctuation symbol \\ \hline
-LEMMA     & Lemma or the base form of a word \\ \hline
-UPOS      & Universal part-of-speech tag \\ \hline
-XPOS      & Language-specific part-of-speech tag \\ \hline
-FEATS     & Morphological features \\ \hline
-HEAD      & Syntactic head of the current word \\ \hline
-DEPREL    & Universal dependency relation to the \\ \hline
-DEPS      & Enhanced dependency relations \\ \hline
-MISC      & Any additional annotations \\ \hline
+\multicolumn{1}{|c|}{Поле} & \multicolumn{1}{|c|}{Опис} \\ \hline
+  
+ID        & Індекс слова у реченні \\ \hline
+FORM      & Форма слова або пунктуаційного знака \\ \hline
+LEMMA     & Лема або базова форма слова \\ \hline
+UPOS      & Тег універсальної частинини мови \\ \hline
+XPOS      & Тег неуніверсальної частинини мови \\ \hline
+FEATS     & Морфологічні особливості \\ \hline
+HEAD      & Синтаксичний корінь поточного слова \\ \hline
+DEPREL    & Універсальне відношення залежності до HEAD \\ \hline
+DEPS      & Покращені відношення залежності \\ \hline
+MISC      & Будь-які додаткові примітки \\ \hline
 \end{tabular}
-\caption{Table to test captions and labels.}
-\label{table:1}
+\caption{Складові токенів слів у файлі CoNLL-U}
+\label{table:conllu}
 \end{table}
