--- a/article/structural/bibliography.tex
+++ b/article/structural/bibliography.tex
@@ -1,52 +1,71 @@
-\thispagestyle{empty}
 \begin{thebibliography}{99}
+\pagestyle{empty}
 
 \phantomsection
 \addcontentsline{toc}{section}{\refname}
+
+\bibitem{bib3}
+Shkuratjana, N. and Shevchuk, S. (2010). Modern Ukrainian literary language. Modular course.
+
+\bibitem{bib5}
+Constituency Grammars : URL :
+https://web.stanford.edu/~jurafsky/slp3/12.pdf
+
+\bibitem{bib6}
+Cocke–Younger–Kasami algorithm : URL :
+https://en.wikipedia.org/wiki/CYK\_algorithm
+
+\bibitem{bib7}
+Chomsky normal form : URL : \\
+https://en.wikipedia.org/wiki/Chomsky\_normal\_form
+
+\bibitem{bib8}
+Logical Representations of Sentence Meaning : URL :
+https://web.stanford.edu/~jurafsky/slp3/15.pdf
 
 \bibitem{bib1}
 Marie-Catherine de Marneffe, Christopher D. Manning, Joakim Nivre, Daniel Zeman;
 Universal Dependencies. Computational Linguistics 2021; 47 (2): 255–308. doi:
 https://doi.org/10.1162/coli\_a\_00402
 
-\bibitem{bib2} ref2
-https://aclanthology.org/2020.lrec-1.497
+\bibitem{bib2}
+Nivre, J., de Marneffe, M.-C., Ginter, F., Hajič, J., Manning, C. D., Pyysalo, S., Schuster, S., Tyers, F., \& Zeman, D. (2020). Universal Dependencies v2: An Evergrowing Multilingual Treebank Collection. Proceedings of the 12th Language Resources and Evaluation Conference, 4034–4043. URL: https://aclanthology.org/2020.lrec-1.497
 
-\bibitem{bib3}
-Shkuratjana, N. and Shevchuk, S. (2010). Modern Ukrainian literary language. Modular course.
+\bibitem{bib9}
+Lipenkova, J., \& Souček, M. (2014, April). Converting Russian dependency treebank to Stanford typed dependencies representation. In Proceedings of the 14th Conference of the European Chapter of the Association for Computational Linguistics, volume 2: Short Papers (pp. 143-147).
 
-\bibitem{bib5}
-https://web.stanford.edu/~jurafsky/
-web.stanford.edu/~jurafsky/slp3/12.pdf
+\bibitem{bib10}
+Nivre, J. (2007, June). Data-driven dependency parsing across languages and domains: perspectives from the CoNLL-2007 shared task. In Proceedings of the Tenth International Conference on Parsing Technologies (pp. 168-170).
 
-\bibitem{bib6}
-https://en.wikipedia.org/wiki/CYK\_algorithm
-
-\bibitem{bib7}
-https://en.wikipedia.org/wiki/Chomsky\_normal\_form
+\bibitem{bib11}
+Buchholz, S., \& Marsi, E. (2006, June). CoNLL-X shared task on multilingual dependency parsing. In Proceedings of the tenth conference on computational natural language learning (CoNLL-X) (pp. 149-164).
 
 \bibitem{bib4}
-https://microsoft.github.io/language-server-protocol/specifications/lsp/3.17/specification/
+Language Server Protocol : URL :
+https://microsoft.github.io/language-server-protocol
 
-
-
-\bibitem{bib8}
-ааа
-\bibitem{bib9}
-ааа
-\bibitem{bib10}
-ааа
-\bibitem{bib11}
-ааа
 \bibitem{bib12}
-ааа
-\bibitem{bib13}
-ааа
-\bibitem{bib14}
-ааа
-\bibitem{bib15}
-ааа
-\bibitem{bib16}
+Золотий морфосинтаксовий стандарт : URL :
 https://mova.institute/золотий\_стандарт
+
+
+
+\bibitem{bib13}
+Scott Chacon, Ben Straub, Pro Git : Apress; 2nd ed. edition 2014. 440p.
+
+\bibitem{bib14}
+Gabriel Valiente Algorithms on Trees and Graphs : Springer; 2002nd edition (September 5, 2002). 450p.
+
+\bibitem{bib15}
+Маккинли У. Python и анализ данных : ДМК Пресс, 2015. 482с.
+
+\bibitem{bib16}
+Lundh F. Python Standard Library : O’Reilly \& Associates, 2001. 254p.
+
+\bibitem{bib17}
+Dynamic Programming on Trees (Algorithms for Coding Interviews), 2022. 141p.
+
+\bibitem{bib18}
+Universal Dependencies : URL : https://universaldependencies.org
 
 \end{thebibliography}
