--- a/article/preamble.tex
+++ b/article/preamble.tex
@@ -18,7 +18,7 @@
     \geometry{left=25mm}
     \geometry{right=10mm}
 \usepackage{fancyhdr}
-    \pagestyle{fancy}
+    % \pagestyle{fancy}
     \fancyhf{}
     \rfoot{\thepage}
     \renewcommand{\headrulewidth}{0mm}
@@ -49,7 +49,15 @@
 \usepackage[labelsep=endash]{caption}
     \DeclareCaptionLabelSeparator{endash}{ --- }
 \usepackage{indentfirst} % Відступ у першомі параграфі секції
-\usepackage[center]{titlesec} % Відцентрувати заголовки
+\usepackage{titlesec} % Відцентрувати заголовки
+    \titleformat*{\section}{\normalsize\bfseries\filcenter\Large\MakeUppercase}
+    \titlespacing*{\subsection}{\parindent}{*4}{*4}
+
+\usepackage{enumitem}
+    \setenumerate[1]{label={\arabic*)}}
+\usepackage{float}
+\usepackage{multicol}
+\usepackage{pdfpages}
 \usepackage{hyperref}
     \hypersetup{
         colorlinks=true,
@@ -65,3 +73,7 @@
 \renewcommand{\section}{\newpage\oldsection}
 
 \sloppy
+
+
+% \usepackage{enumitem} % remove list spacing
+%     \setlist{nolistsep}
