--- a/article/structural/conclusion.tex
+++ b/article/structural/conclusion.tex
@@ -1,6 +1,8 @@
 \phantomsection
 \addcontentsline{toc}{section}{ВИСНОВКИ}
 
+\pagestyle{empty}
+
 \begin{center}
 \textbf{\Large ВИСНОВКИ}
 \end{center}
